--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,7 +9,15 @@
       <header class="masthead">
         <h3 class="masthead-title">
           <a href="{{ site.baseurl }}/" title="Home">{{ site.title }}</a>
-          <small>{{ site.tagline }}</small>
+          <small>
+              &nbsp;&nbsp;&nbsp;<a href="{{ site.path }}/archive">archive</a>
+          </small>
+          <small>
+            &nbsp;&nbsp;&nbsp;<a href="{{ site.path }}/atom.xml">feed</a>
+          </small>
+          <small>
+            &nbsp;&nbsp;&nbsp;<a href="{{ site.path }}/about">about</a>
+          </small>
         </h3>
       </header>
 
