--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,9 +8,9 @@
     <div class="container content">
       <header class="masthead">
         <h3 class="masthead-title">
-          <a href="{{ site.baseurl }}/" title="Home">{{ site.title }}</a>
+          <a href="/" title="Home">{{ site.title }}</a>
           <small>
-              &nbsp;&nbsp;&nbsp;<a href="{{ site.path }}/archive">archive</a>
+            &nbsp;&nbsp;&nbsp;<a href="{{ site.path }}/archive">archive</a>
           </small>
           <small>
             &nbsp;&nbsp;&nbsp;<a href="{{ site.path }}/atom.xml">feed</a>
