--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -27,6 +27,7 @@ html {
 body {
   color: $body-color;
   background-color: $body-bg;
+  overflow-y: scroll;
   -webkit-text-size-adjust: 100%;
       -ms-text-size-adjust: 100%;
 }
