--- a/_sass/_code.scss
+++ b/_sass/_code.scss
@@ -33,10 +33,17 @@ figure {
   margin: 0;
 }
 
-// Pygments via Jekyll
-.highlight {
+.highlighter-rouge {
   padding: 1rem;
   margin-bottom: 1rem;
+  font-size: .8rem;
+  line-height: 1.4;
+  background-color: #f9f9f9;
+  border-radius: .25rem;
+}
+
+// Pygments via Jekyll
+.highlight {
   font-size: .8rem;
   line-height: 1.4;
   background-color: #f9f9f9;
@@ -57,6 +64,10 @@ figure {
     -webkit-user-select: none;
        -moz-user-select: none;
             user-select: none;
+  }
+  
+  .gl {
+    width: 1rem;
   }
   
   table {
