--- a/_sass/_code.scss
+++ b/_sass/_code.scss
@@ -42,8 +42,8 @@ figure {
   border-radius: .25rem;
 }
 
-// Pygments via Jekyll
-.highlight {
+// rouge via Jekyll
+.highlight div {
   font-size: .8rem;
   line-height: 1.4;
   background-color: #f9f9f9;
