--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,13 +10,13 @@
         <h3 class="masthead-title">
           <a href="/" title="Home">{{ site.title }}</a>
           <small>
-            &nbsp;&nbsp;&nbsp;<a href="{{ site.path }}/archive">archive</a>
+            &nbsp;&nbsp;&nbsp;<a href="{{ site.path }}/archive/">archive</a>
           </small>
           <small>
             &nbsp;&nbsp;&nbsp;<a href="{{ site.path }}/atom.xml">feed</a>
           </small>
           <small>
-            &nbsp;&nbsp;&nbsp;<a href="{{ site.path }}/about">about</a>
+            &nbsp;&nbsp;&nbsp;<a href="{{ site.path }}/about/">about</a>
           </small>
         </h3>
       </header>
