--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -10,12 +10,10 @@ layout: default
 
 <div id="disqus_thread"></div>
 <script>
-/*
 var disqus_config = function () {
-    this.page.url = {{ site.baseurl }}{{ post.url }};
-    this.page.identifier = {{ post.url }};
+    this.page.url = "https://nishisbma.com{{ page.url }}";
+    this.page.identifier = "nishisbma.com{{ page.url }}";
 };
-*/
 (function() {
     var d = document, s = d.createElement('script');
     s.src = '//zengjie.disqus.com/embed.js';
