--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -11,7 +11,7 @@ layout: default
 <div id="disqus_thread"></div>
 <script>
 var disqus_config = function () {
-    this.page.url = "https://nishisbma.com{{ page.url }}";
+    this.page.url = "http://nishisbma.com{{ page.url }}";
     this.page.identifier = "nishisbma.com{{ page.url }}";
 };
 (function() {
