--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -11,8 +11,8 @@ layout: default
 <div id="disqus_thread"></div>
 <script>
 var disqus_config = function () {
-    this.page.url = "{{ page.url }}";
-    this.page.identifier = "{{ page.url }}";
+    this.page.url =  window.location.protocol + "//" + window.location.host + "{{ page.url }}";
+    this.page.identifier = window.location.host + "{{ page.url }}";
 };
 (function() {
     var d = document, s = d.createElement('script');
